--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
-<input id = "lastname" type = "text"/>
-<input id = "company" type = "text"/>
+<form>
+  First name:<br>
+  <input id = "lastname" type="text" name="lastname"><br>
+  Last name:<br>
+  <input id = "company" type="text" name="company">
+</form>
+
 
 <iframe src="http://alex-vishneuski-developer-edition.ap4.force.com/" title="Salesforce Sites Iframe" width="50%" height="300"> 
 
