--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <input id = "lastname" type="text" name="lastname"><br>
   Last name:<br>
   <input id = "company" type="text" name="company">
+  <input type="button" value="Create Lead" onclick="createLead();">
 </form>
 
 
