--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
-<form>
-  First name:<br>
-  <input id = "lastname" type="text" name="lastname"><br>
-  Last name:<br>
-  <input id = "company" type="text" name="company">
-  <input type="button" value="Create Lead" onclick="createLead();">
-</form>
+
+
 
 
 <iframe src="http://alex-vishneuski-developer-edition.ap4.force.com/" title="Salesforce Sites Iframe" width="50%" height="300"> 
 
     <p>Your browser does not support iframes.</p>
+
+    <form>
+      First name:<br>
+      <input id = "lastname" type="text" name="lastname"><br>
+      Last name:<br>
+      <input id = "company" type="text" name="company">
+      <input type="button" value="Create Lead" onclick="createLead();"/> 
+    </form>
+
 
 </iframe>
 
