--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         const data = JSON.stringify({
 
-            "lastname": document.getElementById("lastname").value,
+           "lastname": document.getElementById("lastname").value,
 
            "company": document.getElementById("company").value
 
@@ -43,11 +43,13 @@
 
         const xhr = new XMLHttpRequest();
 
-        xhr.addEventListener("readystatechange", function () {
-
-            // TODO handle response    
-
-        });
+        xhr.onload = function() {
+            if (xhr.status != 200) { // анализируем HTTP-статус ответа, если статус не 200, то произошла ошибка
+                alert(`Ошибка ${xhr.status}: ${xhr.statusText}`); // Например, 404: Not Found
+            } else { // если всё прошло гладко, выводим результат
+                alert(`Готово, получили ${xhr.response.length} байт`); // response -- это ответ сервера
+            }
+        };
 
         xhr.open("POST", url, true); 
 
