--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         });
 
-        const url = "https://senla-portal.secure.force.com/portal/services/apexrest/newlead";
+        const url = "http://alex-vishneuski-developer-edition.ap4.force.com/services/apexrest/newlead";
 
         const xhr = new XMLHttpRequest();
 
