--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
       <input id = "lastname1" type="text" name="lastname"><br>
       Last name:<br>
       <input id = "company1" type="text" name="company">
-      <input type="button1" value="Create Lead" onclick="createLead1();"/> 
+      
     </form>
+    <button id="button1" value="Create Lead" onclick="createLead1();"/> 
 
 <script>
 
