--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <input id = "company1" type="text" name="company">
       
     </form>
-    <button id="button1" value="Create Lead" onclick="createLead1();"/> 
+    <button id="button1"onclick="createLead1();">Create Lead</button>>
 
 <script>
 
