--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <input id = "lastname" type="text" name="lastname"><br>
       Last name:<br>
       <input id = "company" type="text" name="company">
-      <input type="button" value="Create Lead" onclick="createLead();"/> 
+      
     </form>
-
+    <button id="button"onclick="createLead();">Create Lead</button>
 
 </iframe>
 
@@ -34,7 +34,7 @@
       <input id = "company1" type="text" name="company">
       
     </form>
-    <button id="button1"onclick="createLead1();">Create Lead</button>>
+    <button id="button1"onclick="createLead1();">Create Lead</button>
 
 <script>
 
