--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@ function createLead1() {
 
         xhr.setRequestHeader("accept", "application/json");
 
+        xht.setRequestHeader("Authorization", "Bearer " + "00D6F000002RIUu!AQ8AQFMBmKijNbN.WZsASmRmBLXorffLRL1OcqBZ749sIop07UuCkw87Mw2y2c3DLhmzTVYnTkDVNNMsKE69oPkxBD6IT28G");
+
         xhr.send(data);
 
     }
