--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         });
 
-        const url = "http://alex-vishneuski-developer-edition.ap4.force.com/services/apexrest/newlead";
+        const url = "https://alex-vishneuski-developer-edition.ap4.force.com/services/apexrest/newlead";
 
         const xhr = new XMLHttpRequest();
 
@@ -81,7 +81,7 @@ function createLead1() {
 
         });
 
-        const url = "http://alex-vishneuski-developer-edition.ap4.force.com/services/apexrest/newlead";
+        const url = "https://alex-vishneuski-developer-edition.ap4.force.com/services/apexrest/newlead";
 
         const xhr = new XMLHttpRequest();
 
